5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1596_1015.log
== SUBMITION (2019-04-02 17:06:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("valor:"))
b=int(input("valor:"))
c=int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(abc)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.123895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 8, in <module>
    print((a+b+c)-min(abc)-max(a,b,c))
NameError: name 'abc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:07:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("valor:"))
b=int(input("valor:"))
c=int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(abc)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.251392
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 8, in <module>
    print((a+b+c)-min(abc)-max(a,b,c))
NameError: name 'abc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:07:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("valor:"))
b=int(input("valor:"))
c=int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(abc)-max(a,b,c))
print(max(a,b,c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print((a+b+c)-min(abc)-max(a,b,c))
NameError: name 'abc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:07:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("valor:"))
b=int(input("valor:"))
c=int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(abc)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.151485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 8, in <module>
    print((a+b+c)-min(abc)-max(a,b,c))
NameError: name 'abc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:08:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=int(input("valor:"))
b=int(input("valor:"))
c=int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.132682
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
